<resources>
    <string name="app_name">Chataway</string>
    <string name="register">Register</string>
    <string name="enter_password_here">Enter Password here</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="send">SEND</string>
    <string name="textview">TextView</string>
    <string name="messages">messages</string>
</resources>
